# mine-kb

./: .env.example  .eslintrc.js  .gitignore  README-ZH.md  README.md  index.html  install.sh  package.json  tailwind.config.js  vitest.config.ts  voice-test.html
docs/: COMPLETE_FIX_SUMMARY.md  FIX_DATETIME_SERIALIZATION.md  FIX_OBLITE_EXECUTE_ERROR.md  FIX_PIP_INSTALL_ERROR.md  FIX_SEEKDB_DATABASE_ERROR.md  FIX_SEEKDB_ORDER_BY.md  FIX_SEEKDB_VECTOR_QUERY.md  FIX_STARTUP_HANG_FINAL.md  FIX_SUMMARY.md  FIX_SUMMARY_2025_01_29.md  FIX_SUMMARY_SEEKDB_ORDER_BY.md  HYBRID_SEARCH_AND_LOGGING.md  MIGRATION_PIP_INSTALL.md  MIGRATION_SEEKDB.md  MIGRATION_SUMMARY.md  MINEKB_DEV_TUTORIAL.md  PATH_FIX_APPLIED.md  SEEKDB_AUTO_INSTALL.md  SEEKDB_USAGE_GUIDE.md  SEEKDB_VECTOR_FIELD_LIMITATION_ANALYSIS.md  SETUP_CHECKLIST.md  SPLASH_SCREEN.md  UPDATE_SUMMARY.md  UPGRADE_SEEKDB_0.0.1.dev4.md  seekdb.md
scripts/: check_app_logs.sh  (+20 more)
src-tauri/: Cargo.toml  Info.plist  config.example.json  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/python/: install_deps.sh  migrate_sqlite_to_seekdb.py  requirements.txt  seekdb_bridge.py  test_datetime_fix.py  test_seekdb.py
src-tauri/src/: app_state_wrapper.rs  config.rs  lib.rs  main.rs
src-tauri/src/commands/: chat.rs  documents.rs  initialization.rs  mod.rs  projects.rs  speech.rs  system.rs
src-tauri/src/models/: conversation.rs  document.rs  mod.rs  project.rs
src-tauri/src/services/: app_state.rs  conversation_service.rs  dashscope_embedding_service.rs  document_processor.rs  document_service.rs  embedded_vector_db.rs  llm_client.rs  mod.rs  project_service.rs  prompts.rs  python_env.rs  python_subprocess.rs  seekdb_adapter.rs  seekdb_package.rs  simple_embeddings.rs  speech_service.rs  vector_db.rs
(+49 files in other folders)
