[package]
name = "mine-kb"
version = "0.1.0"
description = "Local Knowledge Base Management Desktop Application"
authors = ["Mine KB Team"]
license = "MIT"
repository = "https://github.com/mine-kb/mine-kb"
edition = "2021"

[lib]
name = "mine_kb"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mine-kb"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "http-all", "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
# sqlx removed - now using SeekDB via Python subprocess
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
futures = "0.3"
async-stream = "0.3"
log = "0.4"
env_logger = "0.10"
# 文档处理
pdf-extract = "0.7"
docx-rs = "0.4"
# 文本处理
regex = "1.0"
# 加密和哈希
sha2 = "0.10"
# 文件系统操作
walkdir = "2.0"
# 嵌入式向量数据库 (现使用 SeekDB via Python subprocess)
# rusqlite = { version = "0.29", features = ["bundled"] }
# 序列化
bincode = "1.3"
base64 = "0.22.1"
# Embedding 服务 - 使用阿里云百炼 API
# 无需额外依赖，使用已有的 reqwest
# 语音识别相关依赖
hmac = "0.12"
sha1 = "0.10"
url = "2.4"
urlencoding = "2.1"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
